--- a/app/views/settings/api_services/_form.html.erb
+++ b/app/views/settings/api_services/_form.html.erb
@@ -136,7 +136,7 @@
       <li>Click "Create API Key", name it something like "<%= Setting.product_name %>" and paste it below.</li>
     </ol>
     <ol id="gemini-instructions"
-      data-transition-target="<%= gemini?(api_service) && 'transitionable' %>"
+      data-transition-target="<%= google?(api_service) && 'transitionable' %>"
       class="
         list-decimal
         my-3 p-2 pl-8
@@ -161,7 +161,7 @@
       <li>After dismissing the dialog, click "Go to billing" to the right of the key.</li>
       <li>After accepting the Google Cloud terms you'll probably see "This project has no billing account." If so, click "Link a billing account" and then "Create billing account." Follow the directions to set it up. You typically receive $300 in free credit to be used within the first 90 days.</li>
       <li>Google has other ways you can create an API key directly from Google Cloud, but it's a lot more confusing. If you would like to try this instead, for some reason, there are some instructions on
-        <%= link_to "Gemini Credentials", "https://github.com/gbaptista/gemini-ai#credentials",
+        <%= link_to "Google Credentials", "https://github.com/gbaptista/gemini-ai#credentials",
           class: "underline text-blue-600",
           target: "_blank"
         %>.
